--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </div>
           <div>
             <label>Payment Number</label>
-            <input id="co-payment-number">
+            <input id="co-payment-number" value="This text is disabled" disabled >
           </div>
         </div>
         <div>
@@ -110,3 +110,4 @@
   </div>
 </body>
 </html>
+
