--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </div>
           <div>
             <label>Payment Number</label>
-            <input id="co-payment-number" value="This text is disabled" disabled >
+            <input id="co-payment-number" value="This text is read-only" readonly >
           </div>
         </div>
         <div>
@@ -110,4 +110,5 @@
   </div>
 </body>
 </html>
+
 
