--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
 </head>
 <body>
   <header class="site-header">
-    <nav>
-      <a href="index.html">Products</a>
-      <a href="status.html">Order Status</a>
-      <a href="admin.html">Admin</a>
+     <nav>
+      <a href="index.html" class="logo">
+        <img src="logo.png" alt="The Geek Shop Logo" style="height: 40px;">
+      </a>
+      <div class="nav-links">
+        <a href="index.html">Products</a>
+        <a href="status.html">Order Status</a>
+        <a href="admin.html">Admin</a>
+      </div>
     </nav>
   </header>
 
@@ -110,5 +115,6 @@
   </div>
 </body>
 </html>
+
 
 
