--- a/status.html
+++ b/status.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Order Status - The Geek Shop</title>
   <link rel="stylesheet" href="style.css">
+<style>
+  h1 {
+    text-align: center;
+  }
+</style>
 </head>
 <body>
   <header class="site-header">
@@ -19,7 +24,8 @@
       </div>
     </nav>
   </header>
-
+ <div class="container">
+    <h1>Order Status</h1>
 
     <div class="card status-form">
       <form class="form">
@@ -32,9 +38,6 @@
         <button type="submit">Check Status</button>
       </form>
     </div>
-
-  <div class="container">
-    <h1>Order Status</h1>
 
     <section class="notice-section">
       <div class="notice-card card">
@@ -50,11 +53,23 @@
         <p class="muted">Contact us 24/7 at support@geekshop.com.</p>
       </div>
     </section>
-
   </div>
 
-  <footer>
-    <p>© All rights reserved by The Geek Shop</p>
-  </footer>
+
+<footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color: #000000; font-family: Arial, sans-serif; position: fixed; bottom: 0; width: 100%; box-sizing: border-box;">
+  <div>
+    <a href="https://www.facebook.com/thegeek.shop" style="margin: 10px;">
+      <img src="facebook.png" style="width: 30px; height: 30px;">
+    </a>
+    <a href="https://instagram.com/thegeek.shop" target="_blank" style="margin: 10px;">
+      <img src="instagram.png" style="width: 30px; height: 30px;">
+    </a>
+    <a href="https://wa.me/01960788862" target="_blank" style="margin: 10px;">
+      <img src="whatsapp.png" style="width: 30px; height: 30px;">
+    </a>
+  </div>
+  
+  <p>&copy; All rights reserved by The Geek Shop</p>
+</footer>
 </body>
 </html>
