--- a/status.html
+++ b/status.html
@@ -3,20 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Order Status - The Geek Shop</title>
+  <title>Order Status</title>
   <link rel="stylesheet" href="style.css">
-<style>
-  h1 {
-    text-align: center;
-  }
-</style>
+  <script type="module">
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js';
+    import { getAuth } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js';
+    import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js';
+  </script>
+  <script type="module" src="script.js"></script>
 </head>
 <body>
-  <header class="site-header">
-    <nav>
-      <div class="logo">
-        <img src="logo.png" alt="The Geek Shop Logo" height="40">
-      </div>
+<header class="site-header">
+     <nav>
+      <a href="index.html" class="logo">
+        <img src="logo.png" alt="The Geek Shop Logo" style="height: 40px;">
+      </a>
       <div class="nav-links">
         <a href="index.html">Products</a>
         <a href="status.html">Order Status</a>
@@ -24,20 +25,17 @@
       </div>
     </nav>
   </header>
- <div class="container">
-    <h1>Order Status</h1>
 
-    <div class="card status-form">
-      <form class="form">
-        <div class="row">
-          <div>
-            <label for="transaction-id">Transaction ID</label>
-            <input type="text" id="transaction-id" placeholder="Enter your transaction ID">
-          </div>
-        </div>
-        <button type="submit">Check Status</button>
-      </form>
-    </div>
+  <div class="container">
+    <h1>Order Status</h1>
+    <form id="status-form" class="form">
+      <div>
+        <label>Transaction ID</label>
+        <input id="txn-id" required>
+      </div>
+      <button type="submit">Check Status</button>
+    </form>
+  </div>
 
     <section class="notice-section">
       <div class="notice-card card">
@@ -56,16 +54,16 @@
   </div>
 
 
-<footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color: #000000; font-family: Arial, sans-serif; position: fixed; bottom: 0; width: 100%; box-sizing: border-box;">
+<footer style="background-color: #e8e8ff; padding: 20px; text-align: center;height: 90px; color: #000000; font-family: Arial, sans-serif; position: fixed; bottom: 0; width: 100%; box-sizing: border-box;">
   <div>
-    <a href="https://www.facebook.com/thegeek.shop" style="margin: 10px;">
+    <a href="https://www.facebook.com/thegeek.shop0"  style="margin:  10px;">
       <img src="facebook.png" style="width: 30px; height: 30px;">
     </a>
-    <a href="https://instagram.com/thegeek.shop" target="_blank" style="margin: 10px;">
-      <img src="instagram.png" style="width: 30px; height: 30px;">
+   <a href="instagram.com/thegeek.shop0" target="_blank" style="margin:  10px;">
+      <img src="instagram.png"  style="width: 30px; height: 30px;">
     </a>
-    <a href="https://wa.me/01960788862" target="_blank" style="margin: 10px;">
-      <img src="whatsapp.png" style="width: 30px; height: 30px;">
+<a href="wa.me/01960788862" target="_blank" style="margin:  10px;">
+      <img src="whatsapp.png"  style="width: 30px; height: 30px;">
     </a>
   </div>
   
