--- a/index.html
+++ b/index.html
@@ -113,8 +113,23 @@
       </form>
     </div>
   </div>
+<footer style="background-color: #808080; padding: 20px; text-align: center; color: #fff; font-family: Arial, sans-serif;">
+  <div>
+    <a href="https://www.facebook.com" target="_blank" style="margin: 0 10px;">
+      <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
+    </a>
+    <a href="https://www.instagram.com" target="_blank" style="margin: 0 10px;">
+      <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
+    </a>
+  </div>
+  <div style="margin: 10px 0;">
+    <img src="https://via.placeholder.com/100x50?text=The+Geek+Shop+Logo" alt="The Geek Shop Logo" style="max-width: 100px;">
+  </div>
+  <p>&copy; All rights reserved by The Geek Shop</p>
+</footer>
 </body>
 </html>
+
 
 
 
