--- a/index.html
+++ b/index.html
@@ -113,23 +113,23 @@
       </form>
     </div>
   </div>
-<footer style="background-color: #808080; padding: 20px; text-align: center; color: #fff; font-family: Arial, sans-serif;">
+<footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color:  #000000; font-family: Arial, sans-serif;">
   <div>
-    <a href="https://www.facebook.com" target="_blank" style="margin: 0 10px;">
+    <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
       <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
     </a>
-    <a href="https://www.instagram.com" target="_blank" style="margin: 0 10px;">
+    <a href="https://www.instagram.com/thegeekshop.0" target="_blank" style="margin: 0 10px;">
       <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
     </a>
+        <a href="wa.me/01960788862" target="_blank" style="margin: 0 10px;">
+      <img src="whatsapp.png" alt="Instagram" style="width: 30px; height: 30px;">
+    </a>
   </div>
-  <div style="margin: 10px 0;">
-    <img src="https://via.placeholder.com/100x50?text=The+Geek+Shop+Logo" alt="The Geek Shop Logo" style="max-width: 100px;">
-  </div>
+ 
   <p>&copy; All rights reserved by The Geek Shop</p>
 </footer>
 </body>
 </html>
-
 
 
 
