--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
     </nav>
   </header>
 
+
+  
+
   <div class="container">
+
+ <!-- Search Bar -->
+      <div class="search-bar">
+        <input type="text" id="product-search" placeholder="Search products by name...">
+      </div>
     <h1>Products</h1>
     <h2>New Added</h2>
     <div id="new-products" class="product-list new-hot-list"></div>
@@ -100,7 +108,7 @@
             </select>
           </div>
           <div>
-            <label>Payment Number</label>
+            <label>Pay to (Send money)</label>
             <input id="co-payment-number" value="This text is read-only" readonly >
           </div>
         </div>
@@ -113,6 +121,15 @@
       </form>
     </div>
   </div>
+
+  <!-- Image Viewer Modal -->
+    <div id="image-viewer-modal" class="modal">
+      <div class="image-viewer-content">
+        <button id="close-image-viewer-btn">Close</button>
+        <img id="viewer-image" src="" alt="Product Image">
+      </div>
+    </div>
+  </main>
 <footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color:  #000000; font-family: Arial, sans-serif;">
   <div>
     <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
