--- a/index.html
+++ b/index.html
@@ -26,16 +26,17 @@
     </nav>
   </header>
 
-
-  
-
   <div class="container">
-
- <!-- Search Bar -->
-      <div class="search-bar">
-        <input type="text" id="product-search" placeholder="Search products by name...">
-      </div>
     <h1>Products</h1>
+<div class="search-container">
+        <input type="text" id="product-search" placeholder="Search products..." aria-label="Search products">
+        <button id="search-btn" aria-label="Search">
+          <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="11" cy="11" r="8"></circle>
+            <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+          </svg>
+        </button>
+      </div>
     <h2>New Added</h2>
     <div id="new-products" class="product-list new-hot-list"></div>
     <h2>Hot Deals</h2>
@@ -121,15 +122,6 @@
       </form>
     </div>
   </div>
-
-  <!-- Image Viewer Modal -->
-    <div id="image-viewer-modal" class="modal">
-      <div class="image-viewer-content">
-        <button id="close-image-viewer-btn">Close</button>
-        <img id="viewer-image" src="" alt="Product Image">
-      </div>
-    </div>
-  </main>
 <footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color:  #000000; font-family: Arial, sans-serif;">
   <div>
     <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
