--- a/index.html
+++ b/index.html
@@ -28,15 +28,6 @@
 
   <div class="container">
     <h1>Products</h1>
-<div class="search-container">
-        <input type="text" id="product-search" placeholder="Search products..." aria-label="Search products">
-        <button id="search-btn" aria-label="Search">
-          <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
-            <circle cx="11" cy="11" r="8"></circle>
-            <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
-          </svg>
-        </button>
-      </div>
     <h2>New Added</h2>
     <div id="new-products" class="product-list new-hot-list"></div>
     <h2>Hot Deals</h2>
@@ -135,12 +126,16 @@
         <a href="wa.me/01960788862" target="_blank" style="margin: 0 10px;">
       <img src="whatsapp.png" alt="Instagram" style="width: 30px; height: 30px;">
     </a>
-  </div>
+  </div><div id="image-popup" class="image-popup">
+  <img src="" alt="Zoomed Product">
+</div>
+
  
   <p>&copy; All rights reserved by The Geek Shop</p>
 </footer>
 </body>
 </html>
+
 
 
 
