--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
   </main>
 
   <div id="image-viewer" class="image-viewer">
-    <img src="" alt="Zoomed image">
+    <div class="image-viewer-content">
+      <img src="" alt="Zoomed image">
+    </div>
   </div>
 
   <div id="checkout-modal" class="modal">
