--- a/status.html
+++ b/status.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Order Status</title>
+ <link rel="icon" type="image/x-icon" href="logo t.png"> 
   <link rel="stylesheet" href="style.css">
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js';
@@ -39,16 +40,16 @@
 
     <section class="notice-section">
       <div class="notice-card card">
-        <h3>Shipping Update</h3>
-        <p class="muted">All orders placed before 5 PM are shipped same day.</p>
+        <h3>Important update</h3>
+        <p class="muted">N/a</p>
       </div>
       <div class="notice-card card">
-        <h3>Return Policy</h3>
-        <p class="muted">30-day hassle-free returns on all products.</p>
+        <h3>Return and Shipping Policy</h3>
+        <p class="muted">Items can be returned within 7 days of purchase. Please ensure products are in original condition. All orders placed before 6 PM are dispatched the same day and expected delivey time is 3-7 business days.</p>
       </div>
       <div class="notice-card card">
         <h3>Support</h3>
-        <p class="muted">Contact us 24/7 at support@geekshop.com.</p>
+        <p class="muted">Contact us through Facebook or Instagram to file a complain or to cancle your order.</p>
       </div>
     </section>
   </div>
@@ -70,4 +71,5 @@
   <p>&copy; All rights reserved by The Geek Shop</p>
 </footer>
 </body>
+
 </html>
