--- a/index.html
+++ b/index.html
@@ -3,22 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Products</title>
- <link rel="icon" type="image/x-icon" href="logo t.png"> 
+  <title>Products | The Geek Shop</title>
   <link rel="stylesheet" href="style.css">
-  <script type="module">
-    import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js';
-    import { getAuth } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js';
-    import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js';
-  </script>
-  <script type="module" src="script.js"></script>
 </head>
 <body>
   <header class="site-header">
-     <nav>
-      <a href="index.html" class="logo">
-        <img src="logo.png" alt="The Geek Shop Logo" style="height: 40px;">
-      </a>
+    <nav>
+      <div class="logo"><img src="logo.png" alt="The Geek Shop" height="40"></div>
       <div class="nav-links">
         <a href="index.html">Products</a>
         <a href="status.html">Order Status</a>
@@ -27,28 +18,41 @@
     </nav>
   </header>
 
-  <div class="container">
+  <div class="container product-sections">
     <h1>Products</h1>
     <h2>New Added</h2>
-    <div id="new-products" class="product-list new-hot-list"></div>
+    <div class="product-list new-hot-list" id="new-products"></div>
     <h2>Hot Deals</h2>
-    <div id="hot-deals" class="product-list new-hot-list"></div>
+    <div class="product-list new-hot-list" id="hot-deals"></div>
     <h2>All Products</h2>
-    <div id="all-products" class="product-list"></div>
+    <div class="product-list" id="all-products"></div>
   </div>
-<div id="image-viewer" class="image-viewer">
-    <div class="image-viewer-content">
-      <img src="" alt="Zoomed image">
+  <div id="product-detail" style="display: none;">
+    <button id="back-to-list">Back to Products</button>
+    <div class="product-detail-card card">
+      <div class="gallery">
+        <img id="main-image" src="" alt="" style="width: 100%; height: 300px; object-fit: cover; border-radius: 8px;">
+        <div class="thumbnails"></div>
+      </div>
+      <h1 id="detail-name"></h1>
+      <div class="badges" id="detail-badges"></div>
+      <div class="muted">Color: <span id="detail-color"></span></div>
+      <div class="price" id="detail-price"></div>
+      <p id="detail-desc"></p>
+      <div class="order-row">
+        <button id="detail-order-btn">Order</button>
+      </div>
     </div>
   </div>
-   
-  <div id="checkout-modal" class="modal">
+
+  <div class="modal" id="checkout-modal">
     <div class="modal-content card">
       <div class="modal-header">
         <h2>Checkout</h2>
-        <button id="close-modal-btn" class="secondary">Close</button>
+        <button class="secondary" id="close-modal-btn">Close</button>
       </div>
-      <form id="checkout-form" class="form">
+      <form class="form" id="checkout-form">
+        <input type="hidden" id="co-product-id">
         <div class="row">
           <div>
             <label>Product Name</label>
@@ -63,13 +67,12 @@
           <div>
             <label>Price (tk)</label>
             <input id="co-price" readonly>
-            <input id="co-product-id" type="hidden">
-            <input id="co-unit-price-raw" type="hidden">
-            <input id="co-available-stock" type="hidden">
+            <input type="hidden" id="co-unit-price-raw">
+            <input type="hidden" id="co-available-stock">
           </div>
           <div>
             <label>Quantity</label>
-            <input id="co-qty" type="number" min="1" required>
+            <input type="number" id="co-qty" min="1" required>
           </div>
         </div>
         <div class="row">
@@ -89,7 +92,7 @@
           </div>
           <div>
             <label>Phone</label>
-            <input id="co-phone" type="tel" required>
+            <input id="co-phone" required>
           </div>
         </div>
         <div>
@@ -107,39 +110,36 @@
           </div>
           <div>
             <label>Pay to (Send money)</label>
-            <input id="co-payment-number" value="This text is read-only" readonly >
+            <input id="co-payment-number" readonly>
           </div>
         </div>
         <div>
           <label>Transaction ID</label>
           <input id="co-txn">
         </div>
-        <p id="co-note" class="muted"></p>
-        <button id="place-order-btn" type="submit">Place Order</button>
+        <p class="muted" id="co-note"></p>
+        <button id="place-order-btn">Place Order</button>
       </form>
     </div>
   </div>
-<footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color:  #000000; font-family: Arial, sans-serif;">
-  <div>
-    <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-      <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
-    </a>
-    <a href="https://www.instagram.com/thegeekshop.0" target="_blank" style="margin: 0 10px;">
-      <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
-    </a>
-        <a href="wa.me/01960788862" target="_blank" style="margin: 0 10px;">
-      <img src="whatsapp.png" alt="Instagram" style="width: 30px; height: 30px;">
-    </a>
-  </div>
- 
-  <p>&copy; All rights reserved by The Geek Shop</p>
-</footer>
+
+  <footer>
+    <div class="notice-section">
+      <div class="notice-card card">
+        <h3>Fast Delivery</h3>
+        <p>We ensure quick and reliable delivery across the country.</p>
+      </div>
+      <div class="notice-card card">
+        <h3>Secure Payments</h3>
+        <p>Pay safely with Bkash or Cash on Delivery.</p>
+      </div>
+      <div class="notice-card card">
+        <h3>24/7 Support</h3>
+        <p>Contact us anytime for assistance.</p>
+      </div>
+    </div>
+    <p>© All rights reserved by The Geek Shop</p>
+  </footer>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
