--- a/status.html
+++ b/status.html
@@ -45,7 +45,61 @@
       </div>
       <div class="notice-card card">
         <h3>Return and Shipping Policy</h3>
-        <p class="muted">Items can be returned within 7 days of purchase. Please ensure products are in original condition. All orders placed before 6 PM are dispatched the same day and expected delivey time is 3-7 business days.</p>
+        <p class="muted">📦 Shipping Policy
+1. Order Processing & Dispatch
+
+All confirmed orders placed before 6:00 PM are processed and dispatched the same business day.
+
+Orders placed after 6:00 PM will be dispatched on the next business day.
+
+2. Delivery Timeline
+
+Estimated delivery time is 3–7 business days, depending on the delivery location and courier service efficiency.
+
+Customers will be notified with tracking details once the order has been dispatched.
+
+3. Pre-Order Policy
+
+A 50% advance payment is required to confirm any pre-order.
+
+Important Note:
+
+Once a pre-order is confirmed, it cannot be cancelled, refunded, or placed on hold.
+
+Customers are strongly advised to verify the product at the time of delivery in the presence of the delivery agent.
+
+🔄 Return Policy
+1. Eligibility Window
+
+Items can be returned within 7 days of purchase.
+
+The 7-day period will be counted from the date of delivery.
+
+2. Condition of Returned Items
+
+Returned products must be in their original condition, unused, and with all packaging and accessories intact.
+
+Items not meeting these conditions may be declined for return.
+
+3. Valid Reasons for Return
+
+Change of preference is not accepted
+
+Returns cannot be made on grounds such as “I didn’t like the product” or “changed my mind”.
+
+1.1 Defective on Arrival
+
+Products may only be returned if they are found to be defective or damaged upon delivery.
+
+1.2 Pre-Ordered Products
+
+Confirmed pre-orders cannot be returned, except in cases where the product is defective on arrival (as per 1.1).
+
+4. Exclusions
+
+Pre-order items are not eligible for cancellation, return, or refund (except under clause 1.1).
+
+Hygiene-sensitive or custom-made products (if applicable) are non-returnable.</p>
       </div>
       <div class="notice-card card">
         <h3>Support</h3>
@@ -73,3 +127,4 @@
 </body>
 
 </html>
+
