--- a/status.html
+++ b/status.html
@@ -45,61 +45,46 @@
       </div>
       <div class="notice-card card">
         <h3>Return and Shipping Policy</h3>
-        <p class="muted">📦 Shipping Policy
-1. Order Processing & Dispatch
+        <p class="muted"><h3>📦 Shipping Policy</h3>
 
-All confirmed orders placed before 6:00 PM are processed and dispatched the same business day.
+<h4>1. Order Processing & Dispatch</h4>
+<p>▪ All confirmed orders placed before <b>6:00 PM</b> are processed and dispatched the <b>same business day</b>.<br>
+▪ Orders placed after 6:00 PM will be dispatched on the <b>next business day</b>.</p>
 
-Orders placed after 6:00 PM will be dispatched on the next business day.
+<h4>2. Delivery Timeline</h4>
+<p>▪ Estimated delivery time is <b>3–7 business days</b>, depending on the delivery location and courier service efficiency.<br>
+▪ Customers will be notified with tracking details once the order has been dispatched.</p>
 
-2. Delivery Timeline
+<h4>3. Pre-Order Policy</h4>
+<p>▪ A <b>50% advance payment</b> is required to confirm any pre-order.</p>
+<p><b>Important Note:</b><br>
+▪ Once a pre-order is confirmed, it <b>cannot be cancelled, refunded, or placed on hold</b>.<br>
+▪ Customers are strongly advised to <b>verify the product at the time of delivery</b> in the presence of the delivery agent.</p>
 
-Estimated delivery time is 3–7 business days, depending on the delivery location and courier service efficiency.
+<hr>
 
-Customers will be notified with tracking details once the order has been dispatched.
+<h3>🔄 Return Policy</h3>
 
-3. Pre-Order Policy
+<h4>1. Eligibility Window</h4>
+<p>▪ Items can be returned within <b>7 days of purchase</b>.<br>
+▪ The 7-day period will be counted from the <b>date of delivery</b>.</p>
 
-A 50% advance payment is required to confirm any pre-order.
+<h4>2. Condition of Returned Items</h4>
+<p>▪ Returned products must be in their <b>original condition</b>, unused, and with all packaging and accessories intact.<br>
+▪ Items not meeting these conditions may be declined for return.</p>
 
-Important Note:
+<h4>3. Valid Reasons for Return</h4>
+<p>▪ <b>Change of preference is not accepted</b><br>
+&nbsp;&nbsp; - Returns <b>cannot</b> be made on grounds such as “I didn’t like the product” or “changed my mind”.</p>
 
-Once a pre-order is confirmed, it cannot be cancelled, refunded, or placed on hold.
+<p>▪ <b>Defective on Arrival</b><br>
+&nbsp;&nbsp; - Products may only be returned if they are found to be <b>defective or damaged upon delivery</b>.</p>
 
-Customers are strongly advised to verify the product at the time of delivery in the presence of the delivery agent.
+<p>▪ <b>Pre-Ordered Products</b><br>
+&nbsp;&nbsp; - Confirmed pre-orders <b>cannot be returned</b>, except in cases where the product is <b>defective on arrival</b>.</p>
 
-🔄 Return Policy
-1. Eligibility Window
-
-Items can be returned within 7 days of purchase.
-
-The 7-day period will be counted from the date of delivery.
-
-2. Condition of Returned Items
-
-Returned products must be in their original condition, unused, and with all packaging and accessories intact.
-
-Items not meeting these conditions may be declined for return.
-
-3. Valid Reasons for Return
-
-Change of preference is not accepted
-
-Returns cannot be made on grounds such as “I didn’t like the product” or “changed my mind”.
-
-1.1 Defective on Arrival
-
-Products may only be returned if they are found to be defective or damaged upon delivery.
-
-1.2 Pre-Ordered Products
-
-Confirmed pre-orders cannot be returned, except in cases where the product is defective on arrival (as per 1.1).
-
-4. Exclusions
-
-Pre-order items are not eligible for cancellation, return, or refund (except under clause 1.1).
-
-Hygiene-sensitive or custom-made products (if applicable) are non-returnable.</p>
+<h4>4. Exclusions</h4>
+<p>▪ Pre-order items are <b>not eligible</b> for cancellation, return, or refund (except under the Defective on Arrival clause).<br></p>
       </div>
       <div class="notice-card card">
         <h3>Support</h3>
@@ -127,4 +112,5 @@ Hygiene-sensitive or custom-made products (if applicable) are non-returnable.</p
 </body>
 
 </html>
+
 
