--- a/status.html
+++ b/status.html
@@ -94,23 +94,26 @@
   </div>
 
 
-<footer style="background-color: #e8e8ff; padding: 20px; text-align: center;height: 90px; color: #000000; font-family: Arial, sans-serif; position: fixed; bottom: 0; width: 100%; box-sizing: border-box;">
-  <div>
-    <a href="https://www.facebook.com/thegeek.shop0"  style="margin:  10px;">
-      <img src="facebook.png" style="width: 30px; height: 30px;">
-    </a>
-   <a href="instagram.com/thegeek.shop0" target="_blank" style="margin:  10px;">
-      <img src="instagram.png"  style="width: 30px; height: 30px;">
-    </a>
-<a href="wa.me/01960788862" target="_blank" style="margin:  10px;">
-      <img src="whatsapp.png"  style="width: 30px; height: 30px;">
-    </a>
-  </div>
-  
-  <p>&copy; All rights reserved by The Geek Shop</p>
-</footer>
+  <footer>
+    <div class="notice-section">
+      <div class="notice-card card">
+        <h3>Fast Delivery</h3>
+        <p>We ensure quick and reliable delivery across the country.</p>
+      </div>
+      <div class="notice-card card">
+        <h3>Secure Payments</h3>
+        <p>Pay safely with Bkash or Cash on Delivery.</p>
+      </div>
+      <div class="notice-card card">
+        <h3>24/7 Support</h3>
+        <p>Contact us anytime for assistance.</p>
+      </div>
+    </div>
+    <p>© All rights reserved by The Geek Shop</p>
+  </footer>
 </body>
 
 </html>
+
 
 
