--- a/status.html
+++ b/status.html
@@ -45,47 +45,62 @@
       </div>
       <div class="notice-card card">
         <h3>Return and Shipping Policy</h3>
-        <p class="muted"><h3>📦 Shipping Policy</h3>
+        <p class="muted"><div style="text-align: left; line-height: 1.6; font-family: Arial, sans-serif;">
 
-<h4>1. Order Processing & Dispatch</h4>
-<p>▪ All confirmed orders placed before <b>6:00 PM</b> are processed and dispatched the <b>same business day</b>.<br>
-▪ Orders placed after 6:00 PM will be dispatched on the <b>next business day</b>.</p>
+  <h3>📦 Shipping Policy</h3>
 
-<h4>2. Delivery Timeline</h4>
-<p>▪ Estimated delivery time is <b>3–7 business days</b>, depending on the delivery location and courier service efficiency.<br>
-▪ Customers will be notified with tracking details once the order has been dispatched.</p>
+  <h4>1. Order Processing & Dispatch</h4>
+  <ul>
+    <li>All confirmed orders placed before <b>6:00 PM</b> are processed and dispatched the <b>same business day</b>.</li>
+    <li>Orders placed after 6:00 PM will be dispatched on the <b>next business day</b>.</li>
+  </ul>
 
-<h4>3. Pre-Order Policy</h4>
-<p>▪ A <b>50% advance payment</b> is required to confirm any pre-order.</p>
-<p><b>Important Note:</b><br>
-▪ Once a pre-order is confirmed, it <b>cannot be cancelled, refunded, or placed on hold</b>.<br>
-▪ Customers are strongly advised to <b>verify the product at the time of delivery</b> in the presence of the delivery agent.</p>
+  <h4>2. Delivery Timeline</h4>
+  <ul>
+    <li>Estimated delivery time is <b>3–7 business days</b>, depending on the delivery location and courier service efficiency.</li>
+    <li>Customers will be notified with tracking details once the order has been dispatched.</li>
+  </ul>
 
-<hr>
+  <h4>3. Pre-Order Policy</h4>
+  <ul>
+    <li>A <b>50% advance payment</b> is required to confirm any pre-order.</li>
+  </ul>
+  <p><b>Important Note:</b></p>
+  <ul>
+    <li>Once a pre-order is confirmed, it <b>cannot be cancelled, refunded, or placed on hold</b>.</li>
+    <li>Customers are strongly advised to <b>verify the product at the time of delivery</b> in the presence of the delivery agent.</li>
+  </ul>
 
-<h3>🔄 Return Policy</h3>
+  <hr>
 
-<h4>1. Eligibility Window</h4>
-<p>▪ Items can be returned within <b>7 days of purchase</b>.<br>
-▪ The 7-day period will be counted from the <b>date of delivery</b>.</p>
+  <h3>🔄 Return Policy</h3>
 
-<h4>2. Condition of Returned Items</h4>
-<p>▪ Returned products must be in their <b>original condition</b>, unused, and with all packaging and accessories intact.<br>
-▪ Items not meeting these conditions may be declined for return.</p>
+  <h4>1. Eligibility Window</h4>
+  <ul>
+    <li>Items can be returned within <b>7 days of purchase</b>.</li>
+    <li>The 7-day period will be counted from the <b>date of delivery</b>.</li>
+  </ul>
 
-<h4>3. Valid Reasons for Return</h4>
-<p>▪ <b>Change of preference is not accepted</b><br>
-&nbsp;&nbsp; - Returns <b>cannot</b> be made on grounds such as “I didn’t like the product” or “changed my mind”.</p>
+  <h4>2. Condition of Returned Items</h4>
+  <ul>
+    <li>Returned products must be in their <b>original condition</b>, unused, and with all packaging and accessories intact.</li>
+    <li>Items not meeting these conditions may be declined for return.</li>
+  </ul>
 
-<p>▪ <b>Defective on Arrival</b><br>
-&nbsp;&nbsp; - Products may only be returned if they are found to be <b>defective or damaged upon delivery</b>.</p>
+  <h4>3. Valid Reasons for Return</h4>
+  <ul>
+    <li><b>Change of preference is not accepted</b> – Returns <b>cannot</b> be made on grounds such as “I didn’t like the product” or “changed my mind”.</li>
+    <li><b>Defective on Arrival</b> – Products may only be returned if they are found to be <b>defective or damaged upon delivery</b>.</li>
+    <li><b>Pre-Ordered Products</b> – Confirmed pre-orders <b>cannot be returned</b>, except in cases where the product is <b>defective on arrival</b>.</li>
+  </ul>
 
-<p>▪ <b>Pre-Ordered Products</b><br>
-&nbsp;&nbsp; - Confirmed pre-orders <b>cannot be returned</b>, except in cases where the product is <b>defective on arrival</b>.</p>
+  <h4>4. Exclusions</h4>
+  <ul>
+    <li>Pre-order items are <b>not eligible</b> for cancellation, return, or refund (except under the Defective on Arrival clause).</li>
+    <li>Hygiene-sensitive or custom-made products (if applicable) are <b>non-returnable</b>.</li>
+  </ul>
 
-<h4>4. Exclusions</h4>
-<p>▪ Pre-order items are <b>not eligible</b> for cancellation, return, or refund (except under the Defective on Arrival clause).<br></p>
-      </div>
+</div>
       <div class="notice-card card">
         <h3>Support</h3>
         <p class="muted">Contact us through Facebook or Instagram to file a complain or to cancle your order.</p>
@@ -114,6 +129,7 @@
 </body>
 
 </html>
+
 
 
 
