--- a/status.html
+++ b/status.html
@@ -39,73 +39,81 @@
   </div>
 
     <section class="notice-section">
-      <div class="notice-card card">
-        <h3>Important update</h3>
-        <p class="muted">N/a</p>
-      </div>
-      <div class="notice-card card">
-        <h3>Return and Shipping Policy</h3>
-        <p class="muted"><div style="text-align: left; line-height: 1.6; font-family: Arial, sans-serif;">
+  <div class="notice-card card">
+    <h3>📢 Important Notice</h3>
+    <p class="muted">
+      Please ensure all order details are entered correctly before confirmation. 
+      Double-check your address, contact number, and product selection to avoid delays. 
+      Orders once confirmed may be subject to our return and pre-order policies outlined below.
+    </p>
+  </div>
 
-  <h3>📦 Shipping Policy</h3>
+  <div class="notice-card card">
+    <h3>💬 Support</h3>
+    <p class="muted">
+      For assistance, please reach out via:<br>
+      ▪ Facebook: <a href="https://www.facebook.com/kawsara.tonmoy/" target="_blank">The Geek Shop</a><br>
+      ▪ Instagram: <a href="https://www.instagram.com/kawsara.tonmoy/" target="_blank">@thegeekshop</a><br>
+      ▪ WhatsApp: <a href="https://wa.me/01960788862" target="_blank">+880 1960-788862</a>
+    </p>
+  </div>
 
-  <h4>1. Order Processing & Dispatch</h4>
-  <ul>
-    <li>All confirmed orders placed before <b>6:00 PM</b> are processed and dispatched the <b>same business day</b>.</li>
-    <li>Orders placed after 6:00 PM will be dispatched on the <b>next business day</b>.</li>
-  </ul>
+  <div class="notice-card card" style="flex: 2; text-align: left; overflow-y: auto; max-height: 500px;">
+    <h3>📦 Shipping & 🔄 Return Policy</h3>
+    <div style="line-height: 1.6; font-family: Arial, sans-serif;">
+      <h4>1. Order Processing & Dispatch</h4>
+      <ul>
+        <li>All confirmed orders placed before <b>6:00 PM</b> are processed and dispatched the <b>same business day</b>.</li>
+        <li>Orders placed after 6:00 PM will be dispatched on the <b>next business day</b>.</li>
+      </ul>
 
-  <h4>2. Delivery Timeline</h4>
-  <ul>
-    <li>Estimated delivery time is <b>3–7 business days</b>, depending on the delivery location and courier service efficiency.</li>
-    <li>Customers will be notified with tracking details once the order has been dispatched.</li>
-  </ul>
+      <h4>2. Delivery Timeline</h4>
+      <ul>
+        <li>Estimated delivery time is <b>3–7 business days</b>, depending on the delivery location and courier service efficiency.</li>
+        <li>Customers will be notified with tracking details once the order has been dispatched.</li>
+      </ul>
 
-  <h4>3. Pre-Order Policy</h4>
-  <ul>
-    <li>A <b>50% advance payment</b> is required to confirm any pre-order.</li>
-  </ul>
-  <p><b>Important Note:</b></p>
-  <ul>
-    <li>Once a pre-order is confirmed, it <b>cannot be cancelled, refunded, or placed on hold</b>.</li>
-    <li>Customers are strongly advised to <b>verify the product at the time of delivery</b> in the presence of the delivery agent.</li>
-  </ul>
+      <h4>3. Pre-Order Policy</h4>
+      <ul>
+        <li>A <b>50% advance payment</b> is required to confirm any pre-order.</li>
+      </ul>
+      <p><b>Important Note:</b></p>
+      <ul>
+        <li>Once a pre-order is confirmed, it <b>cannot be cancelled, refunded, or placed on hold</b>.</li>
+        <li>Customers are strongly advised to <b>verify the product at the time of delivery</b> in the presence of the delivery agent.</li>
+      </ul>
 
-  <hr>
+      <hr>
 
-  <h3>🔄 Return Policy</h3>
+      <h4>4. Return Policy</h4>
+      <h5>Eligibility Window</h5>
+      <ul>
+        <li>Items can be returned within <b>7 days of purchase</b>.</li>
+        <li>The 7-day period will be counted from the <b>date of delivery</b>.</li>
+      </ul>
 
-  <h4>1. Eligibility Window</h4>
-  <ul>
-    <li>Items can be returned within <b>7 days of purchase</b>.</li>
-    <li>The 7-day period will be counted from the <b>date of delivery</b>.</li>
-  </ul>
+      <h5>Condition of Returned Items</h5>
+      <ul>
+        <li>Returned products must be in their <b>original condition</b>, unused, and with all packaging and accessories intact.</li>
+        <li>Items not meeting these conditions may be declined for return.</li>
+      </ul>
 
-  <h4>2. Condition of Returned Items</h4>
-  <ul>
-    <li>Returned products must be in their <b>original condition</b>, unused, and with all packaging and accessories intact.</li>
-    <li>Items not meeting these conditions may be declined for return.</li>
-  </ul>
+      <h5>Valid Reasons for Return</h5>
+      <ul>
+        <li><b>Change of preference is not accepted</b> – Returns <b>cannot</b> be made on grounds such as “I didn’t like the product” or “changed my mind”.</li>
+        <li><b>Defective on Arrival</b> – Products may only be returned if they are found to be <b>defective or damaged upon delivery</b>.</li>
+        <li><b>Pre-Ordered Products</b> – Confirmed pre-orders <b>cannot be returned</b>, except in cases where the product is <b>defective on arrival</b>.</li>
+      </ul>
 
-  <h4>3. Valid Reasons for Return</h4>
-  <ul>
-    <li><b>Change of preference is not accepted</b> – Returns <b>cannot</b> be made on grounds such as “I didn’t like the product” or “changed my mind”.</li>
-    <li><b>Defective on Arrival</b> – Products may only be returned if they are found to be <b>defective or damaged upon delivery</b>.</li>
-    <li><b>Pre-Ordered Products</b> – Confirmed pre-orders <b>cannot be returned</b>, except in cases where the product is <b>defective on arrival</b>.</li>
-  </ul>
+      <h5>Exclusions</h5>
+      <ul>
+        <li>Pre-order items are <b>not eligible</b> for cancellation, return, or refund (except under the Defective on Arrival clause).</li>
+        <li>Hygiene-sensitive or custom-made products (if applicable) are <b>non-returnable</b>.</li>
+      </ul>
+    </div>
+  </div>
+</section>
 
-  <h4>4. Exclusions</h4>
-  <ul>
-    <li>Pre-order items are <b>not eligible</b> for cancellation, return, or refund (except under the Defective on Arrival clause).</li>
-    <li>Hygiene-sensitive or custom-made products (if applicable) are <b>non-returnable</b>.</li>
-  </ul>
-        </p>
-</div>
-      <div class="notice-card card">
-        <h3>Support</h3>
-        <p class="muted">Contact us through Facebook or Instagram to file a complain or to cancle your order.</p>
-      </div>
-    </section>
   </div>
 
 
@@ -129,6 +137,7 @@
 </body>
 
 </html>
+
 
 
 
