--- a/index.html
+++ b/index.html
@@ -3,13 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Products | The Geek Shop</title>
+  <title>Products</title>
+ <link rel="icon" type="image/x-icon" href="logo t.png"> 
   <link rel="stylesheet" href="style.css">
+  <script type="module">
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js';
+    import { getAuth } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js';
+    import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js';
+  </script>
+  <script type="module" src="script.js"></script>
+<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '655776497078930');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
 </head>
 <body>
   <header class="site-header">
-    <nav>
-      <div class="logo"><img src="logo.png" alt="The Geek Shop" height="40"></div>
+     <nav>
+      <a href="index.html" class="logo">
+        <img src="logo.png" alt="The Geek Shop Logo" style="height: 40px;">
+      </a>
       <div class="nav-links">
         <a href="index.html">Products</a>
         <a href="status.html">Order Status</a>
@@ -18,41 +44,23 @@
     </nav>
   </header>
 
-  <div class="container product-sections">
+  <div class="container">
     <h1>Products</h1>
     <h2>New Added</h2>
-    <div class="product-list new-hot-list" id="new-products"></div>
+    <div id="new-products" class="product-list new-hot-list"></div>
     <h2>Hot Deals</h2>
-    <div class="product-list new-hot-list" id="hot-deals"></div>
+    <div id="hot-deals" class="product-list new-hot-list"></div>
     <h2>All Products</h2>
-    <div class="product-list" id="all-products"></div>
+    <div id="all-products" class="product-list"></div>
   </div>
-  <div id="product-detail" style="display: none;">
-    <button id="back-to-list">Back to Products</button>
-    <div class="product-detail-card card">
-      <div class="gallery">
-        <img id="main-image" src="" alt="" style="width: 100%; height: 300px; object-fit: cover; border-radius: 8px;">
-        <div class="thumbnails"></div>
-      </div>
-      <h1 id="detail-name"></h1>
-      <div class="badges" id="detail-badges"></div>
-      <div class="muted">Color: <span id="detail-color"></span></div>
-      <div class="price" id="detail-price"></div>
-      <p id="detail-desc"></p>
-      <div class="order-row">
-        <button id="detail-order-btn">Order</button>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal" id="checkout-modal">
+   
+  <div id="checkout-modal" class="modal">
     <div class="modal-content card">
       <div class="modal-header">
         <h2>Checkout</h2>
-        <button class="secondary" id="close-modal-btn">Close</button>
+        <button id="close-modal-btn" class="secondary">Close</button>
       </div>
-      <form class="form" id="checkout-form">
-        <input type="hidden" id="co-product-id">
+      <form id="checkout-form" class="form">
         <div class="row">
           <div>
             <label>Product Name</label>
@@ -67,12 +75,13 @@
           <div>
             <label>Price (tk)</label>
             <input id="co-price" readonly>
-            <input type="hidden" id="co-unit-price-raw">
-            <input type="hidden" id="co-available-stock">
+            <input id="co-product-id" type="hidden">
+            <input id="co-unit-price-raw" type="hidden">
+            <input id="co-available-stock" type="hidden">
           </div>
           <div>
             <label>Quantity</label>
-            <input type="number" id="co-qty" min="1" required>
+            <input id="co-qty" type="number" min="1" required>
           </div>
         </div>
         <div class="row">
@@ -92,7 +101,7 @@
           </div>
           <div>
             <label>Phone</label>
-            <input id="co-phone" required>
+            <input id="co-phone" type="tel" required>
           </div>
         </div>
         <div>
@@ -110,36 +119,39 @@
           </div>
           <div>
             <label>Pay to (Send money)</label>
-            <input id="co-payment-number" readonly>
+            <input id="co-payment-number" value="This text is read-only" readonly >
           </div>
         </div>
         <div>
           <label>Transaction ID</label>
           <input id="co-txn">
         </div>
-        <p class="muted" id="co-note"></p>
-        <button id="place-order-btn">Place Order</button>
+        <p id="co-note" class="muted"></p>
+        <button id="place-order-btn" type="submit">Place Order</button>
       </form>
     </div>
   </div>
-
-  <footer>
-    <div class="notice-section">
-      <div class="notice-card card">
-        <h3>Fast Delivery</h3>
-        <p>We ensure quick and reliable delivery across the country.</p>
-      </div>
-      <div class="notice-card card">
-        <h3>Secure Payments</h3>
-        <p>Pay safely with Bkash or Cash on Delivery.</p>
-      </div>
-      <div class="notice-card card">
-        <h3>24/7 Support</h3>
-        <p>Contact us anytime for assistance.</p>
-      </div>
-    </div>
-    <p>© All rights reserved by The Geek Shop</p>
-  </footer>
-  <script type="module" src="script.js"></script>
+<footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color:  #000000; font-family: Arial, sans-serif;">
+  <div>
+    <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
+      <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
+    </a>
+    <a href="https://www.instagram.com/thegeekshop.0" target="_blank" style="margin: 0 10px;">
+      <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
+    </a>
+        <a href="wa.me/01960788862" target="_blank" style="margin: 0 10px;">
+      <img src="whatsapp.png" alt="Instagram" style="width: 30px; height: 30px;">
+    </a>
+  </div>
+ 
+  <p>&copy; All rights reserved by The Geek Shop</p>
+</footer>
 </body>
 </html>
+
+
+
+
+
+
+
