--- a/admin.html
+++ b/admin.html
@@ -3,13 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin | The Geek Shop</title>
+  <title>Admin</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    /* Ensure Orders table shows all columns without horizontal scroll */
+    .table-wrapper {
+      overflow-x: auto;
+    }
+    .orders-table-wrapper {
+      overflow-x: visible !important;
+    }
+    .data-table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+    .data-table th, .data-table td {
+      border: 1px solid #ddd;
+      padding: 8px;
+      text-align: left;
+    }
+    .details-row {
+      display: none;
+      background-color: #f9f9f9;
+    }
+    .details-row td {
+      padding: 15px;
+    }
+    .expand-button {
+      cursor: pointer;
+      color: blue;
+      text-decoration: underline;
+    }
+  </style>
+  <script type="module">
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js';
+    import { getAuth } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js';
+    import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js';
+  </script>
+  <script type="module" src="script.js"></script>
 </head>
 <body>
   <header class="site-header">
     <nav>
-      <div class="logo"><img src="logo.png" alt="The Geek Shop" height="40"></div>
+      <a href="index.html" class="logo">
+        <img src="logo.png" alt="The Geek Shop Logo" style="height: 40px;">
+      </a>
       <div class="nav-links">
         <a href="index.html">Products</a>
         <a href="status.html">Order Status</a>
@@ -21,29 +59,27 @@
   <div class="container">
     <div id="login-panel">
       <h1>Admin Login</h1>
-      <form class="form" id="login-form">
-        <div class="row">
-          <div>
-            <label>Email</label>
-            <input type="email" id="admin-email" required>
-          </div>
-          <div>
-            <label>Password</label>
-            <input type="password" id="admin-pass" required>
-          </div>
+      <form id="login-form" class="form">
+        <div>
+          <label>Email</label>
+          <input id="admin-email" type="email" required>
         </div>
-        <button>Login</button>
+        <div>
+          <label>Password</label>
+          <input id="admin-pass" type="password" required>
+        </div>
+        <button type="submit">Login</button>
       </form>
     </div>
 
     <div id="admin-panel" style="display: none;">
       <div class="panel-header">
         <h1>Admin Panel</h1>
-        <button class="secondary" onclick="logoutAdmin()">Logout</button>
+        <button onclick="logoutAdmin()">Logout</button>
       </div>
 
       <h2>Add Product</h2>
-      <form class="form card" id="add-product-form">
+      <form id="add-product-form" class="form">
         <div class="row">
           <div>
             <label>Name</label>
@@ -60,18 +96,8 @@
             <input id="add-discount">
           </div>
           <div>
-            <label>Featured Image URL</label>
-            <input id="add-featured-image" required>
-          </div>
-        </div>
-        <div class="row">
-          <div>
-            <label>Additional Image 1 URL</label>
-            <input id="add-image2">
-          </div>
-          <div>
-            <label>Additional Image 2 URL</label>
-            <input id="add-image3">
+            <label>Image URL</label>
+            <input id="add-image" required>
           </div>
         </div>
         <div class="row">
@@ -91,14 +117,14 @@
         <div class="row">
           <div>
             <label>Stock</label>
-            <input id="add-stock" type="number">
+            <input id="add-stock" type="number" min="0">
           </div>
         </div>
         <div>
           <label>Description</label>
           <textarea id="add-desc"></textarea>
         </div>
-        <button>Add Product</button>
+        <button type="submit">Add Product</button>
       </form>
 
       <h2>Products</h2>
@@ -107,28 +133,35 @@
           <thead>
             <tr>
               <th>Name</th>
-              <th>Price</th>
-              <th>Featured Image</th>
-              <th>Images</th>
-              <th>Category</th>
               <th>Color</th>
-              <th>Discount (tk)</th>
+              <th>Price</th>
               <th>Stock</th>
-              <th>Description</th>
-              <th>Status</th>
               <th>Actions</th>
             </tr>
           </thead>
-          <tbody id="products-body"></tbody>
+          <tbody id="products-body">
+            <!-- Example row (to be populated dynamically) -->
+            <!--
+            <tr onclick="toggleDetails(this)">
+              <td class="expand-button">Product Name</td>
+              <td>Red</td>
+              <td>1000</td>
+              <td>50</td>
+              <td><button onclick="deleteProduct('product_id')">Delete</button></td>
+            </tr>
+            <tr class="details-row">
+              <td colspan="5">
+                <img src="image_url" alt="Product Image" style="max-width: 200px;">
+                <p>Description: This is the product description.</p>
+              </td>
+            </tr>
+            -->
+          </tbody>
         </table>
-      </div>
-      <div class="pagination">
-        <button id="prev-products" disabled>Previous</button>
-        <button id="next-products">Next</button>
       </div>
 
       <h2>Orders</h2>
-      <div class="table-wrapper">
+      <div class="table-wrapper orders-table-wrapper">
         <table class="data-table">
           <thead>
             <tr>
@@ -151,12 +184,44 @@
           <tbody id="orders-body"></tbody>
         </table>
       </div>
-      <div class="pagination">
-        <button id="prev-orders" disabled>Previous</button>
-        <button id="next-orders">Next</button>
-      </div>
     </div>
   </div>
-  <script type="module" src="script.js"></script>
+
+  <script>
+    function toggleDetails(row) {
+      const detailsRow = row.nextElementSibling;
+      if (detailsRow && detailsRow.classList.contains('details-row')) {
+        detailsRow.style.display = detailsRow.style.display === 'none' ? 'table-row' : 'none';
+      }
+    }
+
+    // Example function to populate products table (adjust as per your Firebase logic)
+    /*
+    function populateProducts(products) {
+      const tbody = document.getElementById('products-body');
+      tbody.innerHTML = '';
+      products.forEach(product => {
+        const row = document.createElement('tr');
+        row.innerHTML = `
+          <td class="expand-button" onclick="toggleDetails(this.parentElement)">${product.name}</td>
+          <td>${product.color || ''}</td>
+          <td>${product.price}</td>
+          <td>${product.stock}</td>
+          <td><button onclick="deleteProduct('${product.id}')">Delete</button></td>
+        `;
+        const detailsRow = document.createElement('tr');
+        detailsRow.classList.add('details-row');
+        detailsRow.innerHTML = `
+          <td colspan="5">
+            <img src="${product.image}" alt="${product.name}" style="max-width: 200px;">
+            <p>Description: ${product.description || 'No description'}</p>
+          </td>
+        `;
+        tbody.appendChild(row);
+        tbody.appendChild(detailsRow);
+      });
+    }
+    */
+  </script>
 </body>
 </html>
