--- a/status.html
+++ b/status.html
@@ -38,7 +38,7 @@
     </form>
   </div>
 
-  <section class="notice-section" style="display: flex; gap: 20px; align-items: flex-start;">
+    <section class="notice-section" style="display: flex; gap: 20px; align-items: flex-start;">
   <!-- Left card -->
   <div class="notice-card card" style="flex: 1; text-align: left;">
     <h3>📢 Important Notice</h3>
@@ -67,7 +67,7 @@
 
     <h3>3. Pre-Order Policy</h3>
     <ul>
-      <li>A <b>50% advance payment</b> is required to confirm any pre-order.</li>
+      <li>A <b>25% advance payment</b> is required to confirm any pre-order.</li>
     </ul>
     <h4>Important Note</h4>
     <ul>
@@ -95,12 +95,6 @@
       <li><b>Defective on Arrival</b> – Products may only be returned if <b>defective or damaged upon delivery</b>.</li>
       <li><b>Pre-Orders</b> – Confirmed pre-orders <b>cannot be returned</b>, unless defective on arrival.</li>
     </ul>
-
-    <h4>4.4 Exclusions</h4>
-    <ul>
-      <li>Pre-order items are <b>not eligible</b> for cancellation, return, or refund (except defective on arrival).</li>
-      <li>Custom-made or hygiene-sensitive products (if applicable) are <b>non-returnable</b>.</li>
-    </ul>
   </div>
 
   <!-- Right card -->
@@ -110,40 +104,30 @@
       For assistance, please reach us via:<br><br>
       ▪ Facebook: <a href="https://www.facebook.com/kawsara.tonmoy/" target="_blank">The Geek Shop</a><br>
       ▪ Instagram: <a href="https://www.instagram.com/kawsara.tonmoy/" target="_blank">@thegeekshop</a><br>
-      ▪ WhatsApp: <a href="https://wa.me/01960788862" target="_blank">+880 1960-788862</a>
+      ▪ WhatsApp: <a href="https://wa.me/01960788862" target="_blank">WhatsApp</a>
     </p>
   </div>
 </section>
 
 
-
+<footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color:  #000000; font-family: Arial, sans-serif;">
+  <div>
+    <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
+      <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
+    </a>
+    <a href="https://www.instagram.com/thegeekshop.0" target="_blank" style="margin: 0 10px;">
+      <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
+    </a>
+        <a href="wa.me/01960788862" target="_blank" style="margin: 0 10px;">
+      <img src="whatsapp.png" alt="Instagram" style="width: 30px; height: 30px;">
+    </a>
   </div>
-
-
-  <footer>
-    <div class="notice-section">
-      <div class="notice-card card">
-        <h3>Fast Delivery</h3>
-        <p>We ensure quick and reliable delivery across the country.</p>
-      </div>
-      <div class="notice-card card">
-        <h3>Secure Payments</h3>
-        <p>Pay safely with Bkash or Cash on Delivery.</p>
-      </div>
-      <div class="notice-card card">
-        <h3>24/7 Support</h3>
-        <p>Contact us anytime for assistance.</p>
-      </div>
-    </div>
-    <p>© All rights reserved by The Geek Shop</p>
-  </footer>
+ 
+  <p>&copy; All rights reserved by The Geek Shop</p>
+</footer>
 </body>
 
 </html>
-
-
-
-
 
 
 
